@@ -7,6 +7,7 @@ Version 0.x.y-state [2005-xxx-yy] - Jesper Veggerby <pear.nosey@veggerby.dk>
     * Added possibility to make one legend use multiple plotareas
     * Added grouping to drivers (currently only fully supported by SVG driver)
     * Added axis padding (padding inside the plotarea)
+    * Added Image_Graph_Axis::setFixedSize() to allow for alignment of axis on different plotareas when in a layout
     * Implemented simple shadows (and removed shadow images from distribution)
     * Fixed bug #3346 "double as data"
     * Fixed a problem with normal multi-data bar charts not displaying expected bar width
